--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(MatrixCalculator)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(matrix_math)
+
 add_executable(MatrixCalculator main.cpp)
